force-app/main/default/objects/Audit_Trail__c/Audit_Trail__c.object-meta.xml
<CustomObject>
    <description>A tracker for certain transactions or processes</description>
    <label>Audit Trail</label>
    <nameField>
        <displayFormat>Audit-{0000000000}</displayFormat>
        <label>Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>