force-app/main/default/objects/Audit_Trail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Account record where an audit transaction was done.</description>
    <inlineHelpText>The Account record where an audit transaction was done.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Audit Trails</relationshipLabel>
    <relationshipName>Audit_Trails_Account</relationshipName>
    <type>Lookup</type>
</CustomField>