force-app/main/default/objects/Audit_Trail__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>To add further details about the record.</description>
    <inlineHelpText>To add further details about the record.</inlineHelpText>
    <label>Additional Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>