force-app/main/default/objects/Audit_Trail__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Contact record where an audit transaction was done.</description>
    <inlineHelpText>The Contact record where an audit transaction was done.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Audit Trails</relationshipLabel>
    <relationshipName>Audit_Trails_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>