force-app/main/default/objects/Audit_Trail__c/fields/guid__c.field-meta.xml
<CustomField>
    <fullName>guid__c</fullName>
    <description>guid auto populated</description>
    <label>GUID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>