force-app/main/default/objects/Audit_Trail__c/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <label>Hash</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>