force-app/main/default/objects/Audit_Trail__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>The full name of the user</description>
    <inlineHelpText>The full name of the user</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>