force-app/main/default/objects/Audit_Trail__c/fields/Reference_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Object_Id__c</fullName>
    <label>Reference Object Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>