force-app/main/default/objects/Audit_Trail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Action done during the creation of the audit trail.</description>
    <inlineHelpText>Action done during the creation of the audit trail.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online Approval of GTC</fullName>
            </value>
            <value>
                <fullName>Credit Limit Approval</fullName>
            </value>
            <value>
                <fullName>Credit Committee Approval</fullName>
            </value>
            <value>
                <fullName>Online Submission of an Invoice</fullName>
            </value>
            <value>
                <fullName>Online Approval of an Invoice</fullName>
            </value>
            <value>
                <fullName>Login to the Marketplace</fullName>
            </value>
            <value>
                <fullName>Buyer Request Signature</fullName>
            </value>
            <value>
                <fullName>Supplier Request Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>