force-app/main/default/objects/Audit_Trail__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>The value used to login into the system (usually an email).</description>
    <inlineHelpText>The value used to login into the system (usually an email).</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>