force-app/main/default/objects/Audit_Trail__c/fields/X2FA_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>X2FA_Mobile_Number__c</fullName>
    <description>The mobile number to be used for two factor authentication.</description>
    <inlineHelpText>The mobile number to be used for two factor authentication.</inlineHelpText>
    <label>2FA Mobile Number</label>
    <type>Phone</type>
</CustomField>