force-app/main/default/objects/Audit_Trail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Additional_Information__c</columns>
    <columns>Hash__c</columns>
    <columns>Username__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>